# aisw-desktop

./: .env.macos-signing.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  marketing-capture.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  desktop-acceptance-matrix.md  desktop-delivery-plan.md  release-runbook.md
scripts/: build-local-bundle.mjs  build-local-bundle.test.mjs  capture-marketing-assets.mjs  cli-arg-utils.mjs  configure-macos-signing-secrets.mjs  configure-macos-signing-secrets.test.mjs  configure-release-secrets.mjs  configure-release-secrets.test.mjs  github-secret-utils.mjs  notarize-macos-dmgs.mjs  notarize-macos-dmgs.test.mjs  prepare-sidecar.mjs  prepare-sidecar.test.mjs  prepare-updater.mjs  prepare-updater.test.mjs  verify-release.mjs  verify-release.test.mjs
src/: App.test.tsx  App.tsx  app-shell.test.ts  app-shell.ts  bootstrap.test.tsx  bootstrap.tsx  main.tsx  marketing-capture.tsx  tauri-plugin-notification.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop-commands.json
src-tauri/src/: bridge.rs  commands.rs  diagnostic_bundle.rs  errors.rs  main.rs  menu.rs  models.rs  redaction.rs  settings.rs  shell.rs  state.rs  tray.rs  updater.rs
src/components/: AnchoredMenu.tsx  AppFrame.tsx  BrandMark.tsx  ButtonRow.tsx  DesktopStatusStrip.tsx  DialogSurface.tsx  HelpSheet.tsx  SearchField.tsx  (+32 more)
(+174 files in other folders)
