[package]
name = "aisw-desktop"
version = "0.1.5"
edition = "2021"
autobins = false

[[bin]]
name = "ai-switcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
